# finance_saving_app_demo

./: .gitignore  Finance Saving App.spec  LICENSE  README.md  build_windows.bat  launcher.py  pyproject.toml
.github/workflows/: pull_request_check.yml
budget_tool/: custom_widgets.py  main.py  ui.py  utils.py
budget_tool/data/: data.db
finance_saving_app/: custom_widgets.py  database.py  general.py  initialise_app.py  main.py  run.bat  style_sheet.py  ui.py
finance_saving_app/data/: data.db
tests/: test_database.py  test_general.py
