[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finance_saving_app"
version = "0.1.0"
description = "A PyQt5 finance management and savings tracking tool with SQLite persistence."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Kent Verbeet" }]
dependencies = ["PyQt5"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
finance-saving-app = "finance_saving_app.main:main"

[tool.setuptools.packages.find]
include = ["finance_saving_app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Added "B" (Bugbear), "UP" (PyUpgrade), and "W" (warnings) for stricter checks
select = ["E", "F", "I", "B", "UP", "W"]
ignore = [
  "D100", # Missing docstring in public module (optional)
  "D104", # Missing docstring in public package (optional)
  "D107", # Missing docstring in __init__ (optional)
  # Removed E501 so line-length is enforced
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint.isort]
known-first-party = ["finance_saving_app"]
combine-as-imports = true
force-single-line = false
lines-between-types = 1

